# scran_variances

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  _formulas.tex  _formulas_dark.tex  annotated.html  choose__highly__variable__genes_8hpp.html  choose__highly__variable__genes_8hpp__dep__incl.map  choose__highly__variable__genes_8hpp__dep__incl.md5  choose__highly__variable__genes_8hpp__incl.map  choose__highly__variable__genes_8hpp__incl.md5  choose__highly__variable__genes_8hpp_source.html  classes.html  dir_bdabb9492db2368b3caf0f4c1df6a160.html  dir_e116cd27fee356ca4cd145c93158892e.html  doxygen_crawl.html  files.html  fit__variance__trend_8hpp.html  fit__variance__trend_8hpp__dep__incl.map  fit__variance__trend_8hpp__dep__incl.md5  fit__variance__trend_8hpp__incl.map  fit__variance__trend_8hpp__incl.md5  fit__variance__trend_8hpp_source.html  functions.html  functions_vars.html  graph_legend.html  index.html  menudata.js  model__gene__variances_8hpp.html  model__gene__variances_8hpp__dep__incl.map  model__gene__variances_8hpp__dep__incl.md5  model__gene__variances_8hpp__incl.map  model__gene__variances_8hpp__incl.md5  model__gene__variances_8hpp_source.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  namespacescran.html  namespacescran_1_1choose__highly__variable__genes.html  namespacescran_1_1fit__variance__trend.html  namespacescran_1_1model__gene__variances.html  (+41 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enums_4.js  enums_5.js  files_0.js  files_1.js  files_2.js  files_5.js  files_7.js  files_8.js  (+43 more)
include/scran/: choose_highly_variable_genes.hpp  fit_variance_trend.hpp  model_gene_variances.hpp
include/scran_variances/: choose_highly_variable_genes.hpp  fit_variance_trend.hpp  model_gene_variances.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: choose_highly_variable_genes.cpp  fit_variance_trend.cpp  model_gene_variances.cpp
